-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
[ 1035.522823] LDISKFS-fs (md66): recovery complete
[ 1035.529014] LDISKFS-fs (md66): mounted filesystem with ordered data mode. Opts: user_xattr,errors=remount-ro,errors=panic,journal_checksum,no_mbcache,nodelalloc
[ 1035.767195] LustreError: 39911:0:(obd_config.c:1320:class_process_proc_param()) osc: testfs-OST0000-osc-MDT0000 unknown param checksums=0
[ 1035.785002] BUG: unable to handle kernel NULL pointer dereference at (null)
[ 1035.794921] IP: [<ffffffff8163c30e>] _raw_spin_lock+0xe/0x50
[ 1035.799217] LustreError: 11-0: testfs-OST0001-osc-MDT0000: operation ost_connect to node 172.18.1.6@o2ib1 failed: rc = -16
[ 1035.815788] PGD fee553067 PUD feb02e067 PMD 0
[ 1035.821834] Oops: 0002 1 SMP
[ 1035.826486] Modules linked in: osp(OE) lod(OE) linear raid10 loop ost(OE) osd_ldiskfs(OE) ldiskfs(OE) mdt(OE) mdd(OE) lfsck(OE) mgs(OE) mgc(OE) lov(OE) osc(OE) mdc(OE) lmv(OE) fid(OE) fld(OE) lquota(OE) ko2iblnd(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) sha512_generic crypto_null libcfs(OE) raid1 nytroxddrv(POE) dm_mod nytroxdlib(POE) ext4 mbcache jbd2 nf_conntrack_ipv4 nf_defrag_ipv4 xt_conntrack xt_multiport iptable_filter xt_CT nf_conntrack iptable_raw rdma_ucm(OE) ib_ucm(OE) rdma_cm(OE) iw_cm(OE) ib_ipoib(OE) ib_cm(OE) ib_uverbs(OE) intel_powerclamp coretemp kvm ib_umad(OE) crc32_pclmul ghash_clmulni_intel aesni_intel lrw gf128mul glue_helper ablk_helper cryptd mlx5_ib(OE) mlx5_core(OE) mlx4_ib(OE) ib_sa(OE) ib_mad(OE) mlx4_en(OE) ib_core(OE) vxlan ip6_udp_tunnel ib_addr(OE) udp_tunnel
[ 1035.912210] ib_netlink(OE) iTCO_wdt iTCO_vendor_support mgag200 syscopyarea pcspkr sysfillrect sg sysimgblt ttm ipmi_devintf drm_kms_helper mlx4_core(OE) sb_edac drm mlx_compat(OE) lpc_ich mei_me edac_core mfd_core i2c_i801 mei shpchp wmi ipmi_si ipmi_msghandler acpi_cpufreq nfsd ip_tables nfsv3 nfs_acl rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache sd_mod crc_t10dif crct10dif_generic team_mode_activebackup team igb isci i2c_algo_bit ahci i2c_core libsas libahci dca crct10dif_pclmul mpt2sas crct10dif_common ptp libata crc32c_intel raid_class pps_core scsi_transport_sas sunrpc bonding
[ 1035.978040] CPU: 14 PID: 39926 Comm: lctl Tainted: P OE ------------ 3.10.0-327.36.3.x3.0.22.x86_64 #1
[ 1035.990783] Hardware name: Intel Corporation S2600JF/S2600JF, BIOS SE5C600.86B.02.02.0002.122320131210 12/23/2013
[ 1036.003324] task: ffff881014087300 ti: ffff880feb474000 task.ti: ffff880feb474000
[ 1036.012782] RIP: 0010:[<ffffffff8163c30e>] [<ffffffff8163c30e>] _raw_spin_lock+0xe/0x50
[ 1036.022916] RSP: 0018:ffff880feb477ea0 EFLAGS: 00010206
[ 1036.029876] RAX: 0000000000020000 RBX: ffff881013b0e000 RCX: 00000000ffffffb9
[ 1036.038878] RDX: 0000000000000000 RSI: 0000000000000001 RDI: 0000000000000000
[ 1036.047859] RBP: ffff880feb477ea0 R08: 0000000000800000 R09: 0000000000000007
[ 1036.056815] R10: 000000000000000a R11: f000000000000000 R12: 0000000000000007
[ 1036.065718] R13: ffff880feb477f48 R14: 0000000000000007 R15: 0000000000000000
[ 1036.074603] FS: 00007fe025154740(0000) GS:ffff88101d900000(0000) knlGS:0000000000000000
[ 1036.084556] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 1036.091860] CR2: 0000000000000000 CR3: 0000000febcff000 CR4: 00000000001407e0
[ 1036.100693] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[ 1036.109509] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
[ 1036.118325] Stack:
[ 1036.121415] ffff880feb477ed0 ffffffffa15f7a69 0000000000800000 00000000b7a0493b
[ 1036.130583] ffff8810163cc000 00007ffc3706cfe1 ffff880feb477ef0 ffffffff8124909d
[ 1036.139751] 0000000000000007 ffff8808174cad00 ffff880feb477f30 ffffffff811dee8d
[ 1036.148912] Call Trace:
[ 1036.152520] [<ffffffffa15f7a69>] osp_reserved_mb_low_seq_write+0xa9/0xf0 [osp]
[ 1036.161573] [<ffffffff8124909d>] proc_reg_write+0x3d/0x80
[ 1036.168590] [<ffffffff811dee8d>] vfs_write+0xbd/0x1e0
[ 1036.175220] [<ffffffff811ef45d>] ? putname+0x3d/0x60
[ 1036.181746] [<ffffffff811df92f>] SyS_write+0x7f/0xe0
[ 1036.188272] [<ffffffff81645089>] system_call_fastpath+0x16/0x1b
[ 1036.195868] Code: 66 83 07 02 f6 47 02 01 74 e5 0f 1f 00 e8 7b 2e ff ff eb db 66 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 55 48 89 e5 b8 00 00 02 00 <f0> 0f c1 07 89 c2 c1 ea 10 66 39 c2 75 02 5d c3 83 e2 fe 0f b7
[ 1036.219502] RIP [<ffffffff8163c30e>] _raw_spin_lock+0xe/0x50
[ 1036.226804] RSP <ffff880feb477ea0>
[ 1036.231549] CR2: 0000000000000000